Path always absolute when importing Alembic #70070

Closed
opened 2019-09-19 14:52:50 +02:00 by Pablo Vazquez · 3 comments
Member

System Information
Operating system: Linux-5.0.0-27-generic-x86_64-with-Ubuntu-19.04-disco 64 Bits
Graphics card: Quadro RTX 4000 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 435.21

Blender Version
Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-09-19 10:54, hash: 87ebc4ef4f

Short description of error
When importing .abc files, the resulting path in the modifier is set to absolute, regardless of the User Preference use_relative_paths.

Exact steps for others to reproduce the error

  • Open default Blender, save the file somewhere.
  • Import an .abc file with a sequence, File -> Import -> Alembic, default settings.
  • The resulting path in the modifier is absolute.

image.png

The workaround is to File -> External Data -> Make All Paths Relative afterwards.

Thanks!

**System Information** Operating system: Linux-5.0.0-27-generic-x86_64-with-Ubuntu-19.04-disco 64 Bits Graphics card: Quadro RTX 4000 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 435.21 **Blender Version** Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-09-19 10:54, hash: `87ebc4ef4f` **Short description of error** When importing .abc files, the resulting path in the modifier is set to absolute, regardless of the User Preference `use_relative_paths`. **Exact steps for others to reproduce the error** * Open default Blender, save the file somewhere. * Import an .abc file with a sequence, `File -> Import -> Alembic`, default settings. * The resulting path in the modifier is absolute. ![image.png](https://archive.blender.org/developer/F7758243/image.png) The workaround is to `File -> External Data -> Make All Paths Relative` afterwards. Thanks!
Author
Member

Added subscriber: @pablovazquez

Added subscriber: @pablovazquez
Sybren A. Stüvel was assigned by Pablo Vazquez 2019-09-19 14:53:09 +02:00

This issue was referenced by 34143e4510

This issue was referenced by 34143e45104b296ece09c646ea3fb0d8bb24c519

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70070
No description provided.