Fix T70070: Path always absolute when importing Alembic

Importing an Alembic file with a relative path is now also possible.